downgrade target to 1.8